--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/native-stack": "^6.2.5",
     "camelize": "^1.0.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.3",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-maps": "0.29.4",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "3.3.2",
@@ -32,9 +35,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
-    "styled-components": "^5.3.3",
-    "lottie-react-native": "5.0.1",
-    "expo-camera": "~12.1.0"
+    "stripe-client": "^1.1.5",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
